<resources>
    <string name="app_name">Play And Learn</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    =======
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="play">PLAY</string>
    <string name="december">december</string>
    >>>>>>> origin/main

    <string name="digital_clock">Digital Clock</string>
    <string name="analog_clock">Analog Clock</string>
    <string name="days">Days</string>
    <string name="months">Months</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="directions">Directions</string>
    <string name="multiplication">Multiplication</string>
    <string name="finding_similar_images">Finding Similar Images</string>
    <string name="track_the_ball">Track The Ball</string>
    <string name="seasons">Seasons</string>
    <string name="back">Back</string>
    <string name="enter_the_time">Enter the time (HH:MM)</string>
    <string name="submit">Submit</string>
    <string name="personal_best">Personal Best</string>
    <string name="current_score">Current Score</string>
    <string name="questions">Questions</string>
    <string name="digital_clock_tutorial">Choose the correct time shown in the figure.</string>
    <string name="TutorialHeader123">Memory Game  Learn and Play with Numbers</string>
    <string name="sequence">Remember the Sequence</string>
    <string name="first_info123">Keep your eyes peeled! Memorize the order in which the numbers appear.</string>
    <string name="tap_the_buttons">Tap the Buttons</string>
    <string name="second_info123">Buttons with numbers will appear below. Tap them in the same order as shown.</string>
    <string name="mistakes_happen">Oops! Mistakes Happen</string>
    <string name="third_info123">If you tap the wrong button, it will flash red briefly.No worries, try again!</string>
    <string name="your_score">Your Score</string>
    <string name="home_button">Return to Homepage</string>
    <string name="try_again_button">Try Again</string>
    <string name="type_beginnig_to_end">Type the digits from beginning to end.</string>
    <string name="type_end_to_beginnig">Type the digits from end to beginning.</string>
    <string name="second_info321">Buttons with numbers will appear below. Tap them in the reverse order as shown.</string>
    <string name="headerABC">Lets Play and Learn Pronunciation!</string>
    <string name="explore_the_images">Explore the Images</string>
    <string name="first_infoABC">You will see different images displayed on the screen.Each image represents a different word.</string>
    <string name="right_pronunciation">Choose the Right Pronunciation</string>
    <string name="second_infoABC">You will see four buttons with different pronunciations.Select the button that has the correct pronunciation.</string>
    <string name="get_feedback">Get Feedback</string>
    <string name="third_infoABC">If you are correct, you will earn points and move on to the next word. If not, do not worry! You can always try again.</string>
    <string name="summer">SUMMER</string>
    <string name="spring">SPRING</string>
    <string name="fall">FALL</string>
    <string name="winter">WINTER</string>
    <string name="summer_Text">-Warmest season of the year \n-Longer days and higher temperatures.</string>
    <string name="spring_Text">-Sunny days \n-Colorful flowers \n-Return of playful animals</string>
    <string name="fall_Text">-Also known as autumn \n-Between summer and winter \n-Trees shed their leaves \n-It is a time of harvest</string>
    <string name="winter_Text">-Coldest season  \n-Shorter days \n-Colder temperatures \n-Snowfall and snowman</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="take_again">You have to take the test again.</string>
    <string name="pretty_good">You are pretty good.</string>
    <string name="try_more">You have to try little more.</string>
    <string name="very_good">You are very good congratulations !</string>
    <string name="TutorialHeaderPictures">Choose The Similar Image !</string>
    <string name="startTheGame">Start the Game</string>
    <string name="first_infoPictures">Press the start button to begin the game.</string>
    <string name="lookAtThePicture">Look at the Picture</string>
    <string name="second_infoPictures">You will see a picture at the top of the screen. This picture could be an animal, a fruit, a vehicle, or another object.</string>
    <string name="chooseTheSimilar">Choose the Correct Option</string>
    <string name="third_infoPictures">Find the image that best matches the picture above and click that button.</string>
    <string name="TutorialHeaderDirections">Directions\nLearn And Play With Quiz !</string>
    <string name="first_infoDirections">Start the quiz by pressing the button.</string>
    <string name="second_infoDirections">You will see images on the screen. Choose the correct direction for the image.</string>
    <string name="third_infoDirections">At the end of the quiz, you will see your total score.Try to beat your previous score each time you play!</string>

</resources>